# sevn

./: .coderabbit.yaml  .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  conftest.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci-cd.yml  ci-supplementary.yml  ci.yml  codeql.yml  docker.yml  pullfrog.yml  style-guide-pages.yml
.ignorelocal/waves/: specs-prd-remediation-and-doc-tooling-wave-plan.md
about-sevn.bot/: ARCHITECTURE.md  DOC-VS-CODE-ANALYSIS.md  GLOSSARY.md  Mission Control.html  Telegram Menu.html  agent-context.html  config.html  getting-started.html  google-workspace.html  index.html  mission-control.html  skills.html  specs-index.md  sub-agents.html  telegram-menu.html  tools.html  troubleshooting.html
about-sevn.bot/_docsys/: README.md  about-docs.schema.json  allowed-refs.txt  manifest.toml
about-sevn.bot/_sources/: agent-context.yaml  config.yaml  getting-started.yaml  google-workspace-functions.yaml  google-workspace.yaml  index.yaml  mission-control.yaml  skills.yaml  sub-agents.yaml  subagents-topology.json  telegram-menu.yaml  tools.yaml  troubleshooting.yaml
about-sevn.bot/_standards/: EDITING.md  WRITING_STYLE.md  coding-standards.md
about-sevn.bot/_templates/: agent-context.html.j2  base.html.j2  config.html.j2  generic.html.j2  google-workspace.html.j2  index.html.j2  mission-control.html.j2  skills.html.j2  sub-agents.html.j2  telegram-menu.html.j2  tools.html.j2
about-sevn.bot/assets/: base.css  index.css
about-sevn.bot/decisions/: 0001-adopt-mattpocock-skills-into-spec-kit-wave.md  0002-adopt-verifier-setup-into-spec-kit-wave.md  README.md
about-sevn.bot/prd/: 00-main.md  01-conversational-experience.md  02-personality-and-memory.md  03-trust-and-control.md  04-getting-things-done.md  05-cost-and-providers.md  06-setup-and-operations.md  07-mission-control.md  08-coding-companion.md  09-knowledge-base.md  10-generated-ui.md  11-automation-and-triggers.md  README.md  (+3 more)
deploy/: inventory.example.toml
docker/: Dockerfile.gateway  Dockerfile.gateway.browser  Dockerfile.gateway.gui  Dockerfile.proxy  Dockerfile.sandbox  README.md  docker-compose.ci.yml  docker-compose.improve-evals.yml  docker-compose.prod.yml  docker-compose.yml
docs/: FAQ.md
infra/: agent-context.manifest.json  agent-context.schema.meta.json  changelog-rules.toml  coding-agents-hub.schema.json  deploy-inventory.schema.json  docker-onboard.json  doctor_solutions.schema.json  mission-control.schema.json  mission-control.schema.meta.json  onboarding_capabilities.schema.json  onboarding_catalog.schema.json  onboarding_fragment.schema.json  onboarding_profiles_catalog.schema.json  onboarding_profiles_fragment.schema.json  remote-deploy-report.schema.json  sevn.json.template  sevn.schema.json  sevn_config_long_description.json  skillspector-baseline.json  skillspector-baseline.schema.json  skillspector-targets.json  triage_result.schema.json
scripts/: Makefile  agent_context_manifest_lib.py  build_about_site.py  build_code_index.py  changelog_validate.py  check_about_docs_refs.py  check_agents.py  check_cli_help_docs.py  check_cli_help_no_spec_refs.py  check_conventional_commit.py  check_docstrings.py  check_doctor_solutions.py  check_dreaming_allowlist.py  check_git_guards.py  check_infra_parity.py  check_loguru_only.py  check_markdown_links.py  check_mission_control_docs.py  check_mission_control_schema.py  check_no_design_doc_refs.py  check_onboarding_capabilities.py  check_onboarding_core_skills.py  check_onboarding_profiles.py  check_pullfrog_ref_parity.py  check_remote_deploy_report.py  check_skills_core_manifest.py  check_skills_index.py  check_skillspector.py  check_telegram_menu.py  check_telegram_menu_docs.py  check_tools_skills_inventory.py  check_type_hints.py  check_ui_style.py  ci_affected.py  ci_changed.py  ci_lib.py  ci_resume.sh  destructive_fs_gate.sh  diagnose_turn.py  dump_storage_golden.py  (+31 more)
security/: pip-audit-allowlist.toml
spec-kit-wave/: CHANGELOG-STANDARDS.md  Makefile  SPEC-KIT-STANDARDS.md  changelog-rules.toml  pyproject.toml  skw.toml
spec-kit-wave/agents/: README.md  docs-folder-author.md  github-issue-triage.md
spec-kit-wave/changelog-templates/: changelog-template.md  entry-template.md
spec-kit-wave/prd-templates/: prd-rules.toml
spec-kit-wave/prompts/: github-issue-triage.md
spec-kit-wave/scripts/: agent.sh  context_paths.py
spec-kit-wave/skills/changelog-author/: SKILL.md
spec-kit-wave/skills/github-issue-triage/: SKILL.md
spec-kit-wave/skills/github-issue-triage/assets/: issue-wave-brief.template.md
spec-kit-wave/skills/github-issue-triage/references/: triage-policy.md
spec-kit-wave/skills/github-issue-triage/scripts/: fetch_open_issues.py  post_issue_update.py
spec-kit-wave/spec-templates/: spec-rules.toml
spec-kit-wave/src/skw/: __init__.py  changelog_validate.py  cli.py  doc_folder.py  doc_score.py  doc_validate.py  prd_validate.py  render.py  spec_validate.py
spec-kit-wave/tests/: _helpers.py  conftest.py  test_changelog_datestamp.py  test_doc_folder.py  test_doc_score.py  test_github_issue_triage_render.py  test_spec_validate.py
tests/: conftest.py  test_placeholder.py
tools/telegram-tester/: README.md  compose.override.e2e.yml  pyproject.toml
tools/telegram-tester/src/sevn_telegram_tester/: __init__.py  __main__.py  assertions.py  auth.py  browser.py  compose.py  config.py  page_setup.py  runner.py  telegram_client.py
tools/telegram-tester/src/sevn_telegram_tester/reporting/: __init__.py  json_report.py
tools/telegram-tester/src/sevn_telegram_tester/suites/: __init__.py  session.py
tools/telegram-tester/tests/: test_assertions.py  test_compose.py  test_session_suite.py  test_telegram_client.py
(+2745 files in other folders)
