[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec-kit-wave"
version = "0.1.0"
description = "spec-kit-wave — doc validation and wave pipeline kit"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alex" }]
dependencies = []

[project.scripts]
skw = "skw.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skw"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["skw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
