[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sevn-telegram-tester"
version = "0.1.0"
description = "Playwright Telegram Web K harness for sevn.bot E2E"
requires-python = ">=3.12"
dependencies = [
    "playwright==1.60.0",
    "pydantic-settings==2.14.0",
    "loguru==0.7.3",
]

[project.scripts]
sevn-telegram-tester = "sevn_telegram_tester.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sevn_telegram_tester"]
